# ive-got-the-power-cpp-template

./: CMakeLists.txt  README.md  factorial.hpp  main.cpp  notRelevant.cpp  test
src/: factorial.cpp  main.cpp  power.cpp
tests/: factorial_test.cpp  power_test.cpp
